# BazaarLens

./: .editorconfig  .gitignore  CHANGES.md  CLAUDE.md  README.md  implementation.md
.claude/memory/: MEMORY.md  feedback_git_commits.md  project_context.md  tech_decisions.md
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_initial.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/api/: events.rs  health.rs  mod.rs  push.rs  scan.rs  strategy.rs  watchlist.rs
backend/src/prompts/: intelligence.rs  mod.rs  strategy.rs
backend/src/schemas/: events.rs  mod.rs  push.rs  scan.rs  strategy.rs  watchlist.rs
backend/src/services/: event_simulator.rs  llm.rs  mod.rs  push_service.rs
backend/src/services/product_lookup/: mod.rs  sources.rs
docs/: api.md  blueprint.md
frontend/: .env.local.example  capacitor.config.ts  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/scan/: page.tsx
frontend/app/watchlist/: page.tsx
frontend/components/: BottomNav.tsx  ErrorBoundary.tsx  HealthCheck.tsx  ShareButton.tsx
frontend/components/intelligence/: InsightPanel.tsx  PricingInsight.tsx  ReviewInsight.tsx
frontend/hooks/: useDeviceId.ts  useScanner.ts  useWatchlist.ts
frontend/lib/: api.ts  supabase.ts  utils.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css
frontend/types/: index.ts
(+46 files in other folders)
